--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "build": "tsc && vite build",
+    "start": "vite preview --host 0.0.0.0 --port $PORT",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
